# income_tax_calculator_japan

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
income_tax_japan/: classes.py  script.py
